test-data/unit/check-based-default-return.test
-- Type checker test cases for default return type.


[case testSimple]
def f(): ...
reveal_type(f)  # N: Revealed type is "def ()"
reveal_type(f())  # N: Revealed type is "None"

def g(i: int): ...
reveal_type(g)  # N: Revealed type is "def (i: int)"

class A:
    def f(self): ...
    def g(self, i: int): ...

reveal_type(A.f)  # N: Revealed type is "def (self: __main__.A)"
reveal_type(A.g)  # N: Revealed type is "def (self: __main__.A, i: int)"


[case testUntypedDefs]
# flags: --allow-untyped-defs --allow-any-expr

def f(): ...
reveal_type(f)  # N: Revealed type is "def () -> Untyped"

def g(i: int): ...
reveal_type(g)  # N: Revealed type is "def (i: int)"

def h(i: int, j): ...  # E: Function is missing a type annotation for one or more arguments  [no-untyped-def]

class A:
    def f(self): ...
    def g(self, i): ...
    def h(self, i: int): ...
    def i(self, i: int, j): ... # E: Function is missing a type annotation for one or more arguments  [no-untyped-def]

reveal_type(A.f)  # N: Revealed type is "def (self: __main__.A) -> Untyped"
reveal_type(A.g)  # N: Revealed type is "def (self: __main__.A, i: Untyped) -> Untyped"
reveal_type(A.h)  # N: Revealed type is "def (self: __main__.A, i: int)"
reveal_type(A.i)  # N: Revealed type is "def (self: __main__.A, i: int, j: Untyped)"


[case testIncompleteDefs]
# flags: --allow-incomplete-defs --allow-untyped-defs --allow-any-expr

def f(i): ...
reveal_type(f)  # N: Revealed type is "def (i: Untyped) -> Untyped"

def g(i: int, j): ...
reveal_type(g)  # N: Revealed type is "def (i: int, j: Untyped)"

class A:
    def f(self): ...
    def g(self, i): ...
    def h(self, i: int): ...
    def i(self, i: int, j): ...

reveal_type(A.f)  # N: Revealed type is "def (self: __main__.A) -> Untyped"
reveal_type(A.g)  # N: Revealed type is "def (self: __main__.A, i: Untyped) -> Untyped"
reveal_type(A.h)  # N: Revealed type is "def (self: __main__.A, i: int)"
reveal_type(A.i)  # N: Revealed type is "def (self: __main__.A, i: int, j: Untyped)"


[case testGenerator]
def f():  # E: The return type of a generator function should be "Generator" or one of its supertypes  [misc]
    yield

def g(i: int):  # E: The return type of a generator function should be "Generator" or one of its supertypes  [misc]
    yield

class A:
    def f(self): # E: The return type of a generator function should be "Generator" or one of its supertypes  [misc]
        yield
    def g(self, i: int): # E: The return type of a generator function should be "Generator" or one of its supertypes  [misc]
        yield


[case testAsync]
async def f1():
    ...
async def f2():  # E: The return type of an async generator function should be "AsyncGenerator" or one of its supertypes  [misc]
    yield

async def g1(i: int):
    ...
async def g2(i: int):  # E: The return type of an async generator function should be "AsyncGenerator" or one of its supertypes  [misc]
    yield

class A:
    async def f1(self):
        ...
    async def f2(self): # E: The return type of an async generator function should be "AsyncGenerator" or one of its supertypes  [misc]
        yield
    async def g1(self, i: int):
        ...
    async def g2(self, i: int): # E: The return type of an async generator function should be "AsyncGenerator" or one of its supertypes  [misc]
        yield

[case testLambda]
# flags: --allow-any-expr

f = lambda x: x
g = lambda: ...
reveal_type(f)  # N: Revealed type is "def (x: Untyped) -> Any"
reveal_type(g)  # N: Revealed type is "def () -> ellipsis"


[case testExplicitAny]
# flags: --allow-any-expr  --allow-any-explicit
from typing import Any

def f() -> Any: ...
def g(i: int) -> Any: ...
reveal_type(f)  # N: Revealed type is "def () -> Any"
reveal_type(g)  # N: Revealed type is "def (i: int) -> Any"

class A:
    def f(self) -> Any: ...
    def g(self, i: int) -> Any: ...
reveal_type(A.f)  # N: Revealed type is "def (self: __main__.A) -> Any"
reveal_type(A.g)  # N: Revealed type is "def (self: __main__.A, i: int) -> Any"


[case testNoDefaultReturn]
# flags: --no-default-return --allow-any-expr

def f(i): ...  # E: Function is missing a type annotation  [no-untyped-def]
def g(i: int, j): ...  # E: Function is missing a return type annotation  [no-untyped-def] \
                       # E: Function is missing a type annotation for one or more arguments  [no-untyped-def]

class A:
    def f(self, i): ...  # E: Function is missing a type annotation  [no-untyped-def]
    def g(self, i: int, j): ...  # E: Function is missing a return type annotation  [no-untyped-def] \
                                 # E: Function is missing a type annotation for one or more arguments  [no-untyped-def]


[case testOverload]
from typing import overload

class A:
    @overload
    def f(self): ...
    @overload
    def f(self, i: int): ...
    def f(self, i: int = 0): ...

reveal_type(A.f)  # N: Revealed type is "Overload(def (self: __main__.A), def (self: __main__.A, i: int))"

@overload
def f(): ...
@overload
def f(i: int): ...
def f(i: int = 0): ...

reveal_type(f)  # N: Revealed type is "Overload(def (), def (i: int))"


[case testOverloadIncomplete]
# flags: --allow-incomplete-defs --allow-untyped-defs --allow-any-expr
from typing import overload

class A:
    @overload
    def f(self): ...
    @overload
    def f(self, i): ...
    @overload
    def f(self, i, j: int): ...
    def f(self, i: int = 0, j: int = 0): ...

reveal_type(A.f)  # N: Revealed type is "Overload(def (self: __main__.A), def (self: __main__.A, i: Untyped), def (self: __main__.A, i: Untyped, j: int))"

@overload
def f(): ...
@overload
def f(i): ...
@overload
def f(i, j: int): ...
def f(i: int = 0, j: int = 0): ...

reveal_type(f)  # N: Revealed type is "Overload(def (), def (i: Untyped), def (i: Untyped, j: int))"


[case testOverloadUntyped]
# flags: --allow-untyped-defs --allow-any-expr
from typing import overload

class A:
    @overload
    def f(self): ...
    @overload
    def f(self, i): ...
    @overload
    def f(self, *, j: int): ...
    def f(self, i: int = 0, j: int = 0): ...

reveal_type(A.f)  # N: Revealed type is "Overload(def (self: __main__.A), def (self: __main__.A, i: Untyped), def (self: __main__.A, *, j: int))"

@overload
def f(): ...
@overload
def f(i): ...
@overload
def f(*, j: int): ...
def f(i: int = 0, j: int = 0): ...

reveal_type(f)  # N: Revealed type is "Overload(def (), def (i: Untyped), def (*, j: int))"

[case testOverloadOther]
# flags: --allow-untyped-defs --allow-incomplete-defs --allow-any-expr
from typing import overload

class A:
    @overload
    def f(self) -> int: ...
    @overload
    def f(self, i): ...
    @overload
    def f(self, i, j: int): ...
    def f(self, i: int = 0, j: int = 0) -> object: ...

reveal_type(A.f)  # N: Revealed type is "Overload(def (self: __main__.A) -> int, def (self: __main__.A, i: Untyped), def (self: __main__.A, i: Untyped, j: int))"

class B:
    @overload
    def f(self) -> str: ...
    @overload
    def f(self, i): ...
    @overload
    def f(self, i, j: int) -> int: ...
    def f(self, i: int = 0, j: int = 0) -> object: ...

reveal_type(B.f)  # N: Revealed type is "Overload(def (self: __main__.B) -> str, def (self: __main__.B, i: Untyped), def (self: __main__.B, i: Untyped, j: int) -> int)"


[case testNewHasError]
# flags: --no-infer-function-types
class A:
    def __new__(cls): ...  # E: "__new__" must return a class instance (got "None")  [misc]

reveal_type(A.__new__)  # N: Revealed type is "def (cls: type[__main__.A])"
